# zed-amble-ext

./: .gitignore  AGENTS.md  AUTOCOMPLETE.md  CHECKLIST.md  CLEANUP_TODO.md  COMMIT_READY.md  Cargo.toml  DIAGNOSTICS.md  FLAG_SUPPORT.md  IMPLEMENTATION_STATUS.md  INSTALL_NOTES.md  LSP_README.md  MAINTENANCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMMIT.md  SUCCESS.md  SUMMARY.md  TREE_SITTER_MIGRATION.md  USAGE.md  build.sh  extension.toml  restore_source.sh  test_comprehensive.amble  test_diagnostics.amble  test_lsp.amble
fixtures/: basic_items.amble  basic_room.amble  copy_of_ts_grammar.js  game.amble  gnats_flyby.amble  guard-post.amble  room_cond_exit.amble  room_overlays.amble  spinners_and_goals.amble  trigger_action_block.amble  trigger_when_cond.amble
fixtures/Amble/: goals.amble  items.amble  npcs.amble  rooms.amble  spinners.amble  triggers.amble
grammars/: amble.wasm  grammar.pest
language-server/: Cargo.toml
language-server/src/: amble.rs  analysis.rs  backend.rs  formatter.rs  queries.rs  symbols.rs  text.rs
language-server/tree-sitter-amble/: Cargo.toml  build.rs
language-server/tree-sitter-amble/src/: lib.rs
languages/amble/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  locals.scm  outline.scm  outlines.scm  tags.scm
snippets/: amble.json  amble.json.old
src/: lib.rs
