[package]
name = "amble-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amble-lsp"
path = "src/amble.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tree-sitter = "0.25"
tree-sitter-amble = { path = "tree-sitter-amble" }
parking_lot = "0.12"
